# zsnoop-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
agent/: zfs_snoop_agent.py
docs/: INSTALL.md  PUBLISHING.md  SECURITY.md  USAGE.md  index.md
docs/onboarding/: 01-what.md  02-agent.md  03-transport.md  04-server.md  05-config.md  06-timeparse.md  07-testing.md  08-security.md  09-build.md  10-extending.md  index.md
src/zsnoop_mcp/: __init__.py  __main__.py  config.py  server.py  timeparse.py  transport.py
tests/: conftest.py  test_config.py  test_dispatch.py  test_main.py  test_methods.py  test_package.py  test_path_safety.py  test_server.py  test_smoke.py  test_subprocess_integration.py  test_timeparse.py  test_transport_command.py  test_transport_local.py  test_transport_local_stderr.py  test_validation.py
